# PointCloud-Classifiers

./: .gitignore  3d_grid.h  CMakeLists.txt  Makefile  bounding_box_feature.cpp  bounding_box_feature.h  feature.cpp  feature.h  features.cpp  features.h  hog_feature.cpp  hog_feature.h  label_reader.cpp  label_reader.h  main.cpp  merge_features.py  read.py  read_groundtruth.cpp  show_point_cloud.cpp  train_multiboost_model.sh  types.cpp  types.h
Multiboost/: Makefile
Multiboost/demo/: result.data  result.data.header  shyp.xml  train.sh  train_data
Multiboost/src/IO/: TxtParser.cpp
Multiboost/src/Utils/: Utils.cpp
